Fix test errors (story #464)